# diffuse_gi

./: Cargo.toml  basic.frag  basic.vert  crate.mtl  house.mtl  shadow.vert  sky_from_atmoshphere.frag  sky_from_atmoshphere.vert  space_from_atmoshphere.vert  space_from_atmosphere.frag
src/: camera.rs  main.rs  model.rs  model_render_system.rs  renderer.rs  shadow_render_system.rs  sky_render_system.rs  triangle.rs
