[package]
name = "diffuse_gi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glium = "*"
cgmath = "0.18.0"
egui = "0.18.1"
egui_extras = "0.18.0"
egui_glium = "0.18.0"
pollster = "0.2.4"
obj = "0.10.2"
image = "*"
fast_poisson = "0.5.2"